[tool.poetry]
name = "WARP-EveryTool"
version = "0.1.0"
description = "基于 Python 的 WARP 工具合集，支持生成无限流量密钥、获取配置文件等功能"
authors = ["hmjz100"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
qrcode = "^7.4.2"
termcolor = "^2.4.0"
qrcode-terminal = "^0.8"
questionary = "^2.0.1"
requests = "^2.32.2"
httpx = "^0.27.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"